--- a/index.org
+++ b/index.org
@@ -27,6 +27,17 @@
 
 [[file:images/future-googler.png]]
 
+#+BEGIN_HTML
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-42122243-1', 'auto');
+  ga('send', 'pageview');
+</script>
+#+END_HTML
+
 * Interview Process & General Interview Prep
 
 ** DONE ABC: Always Be Coding
