[todo] add khanacademy
Signed-off-by: Yen-Chin Lee <coldnew.tw@gmail.com>

--- a/index.org
+++ b/index.org
@@ -358,6 +358,10 @@ would be used in the kernel.
    網址: https://leetcode.com/
 
 
+** TODO KHANACADEMY
+
+    https://www.khanacademy.org/computing/computer-science/algorithms/
+
 * 美國工作相關
 
 ** TODO [[http://www.1point3acres.com/bbs/][一畝三分地論壇-美國加拿大留學申請|工作就業|英語考試|學習生活信噪比最高的網站 - Powered by Discuz!]]
