--- a/index.org
+++ b/index.org
@@ -345,6 +345,10 @@ would be used in the kernel.
 
    這本是在 [[https://wanqu.co/books][灣區日報]] 看到的推薦書，可以當成矽谷旅遊書籍來看，也可以當成講解矽谷的歷史書籍。
 
+** TODO Software Engineering at Google
+
+    網址: https://arxiv.org/ftp/arxiv/papers/1702/1702.01715.pdf
+
 * 程式練習
 
   以下列出我應該要一個一個攻破的練習網站。
