--- a/index.org
+++ b/index.org
@@ -384,4 +384,39 @@ https://www.google.com/edu/cs/learn/student.html
 
     中文: [[https://www.oschina.net/news/82051/do-not-transfer-into-management][別轉管理，十年程序員老鳥給新手的幾條忠告 - 開源中國社區]]
 
+    作者為 Google 柏林開發者團隊領袖，依照他的建議如下:
+
+    - 堅持在一個 framework 或是語言
+
+      大概他認為專精比較重要吧，不過如果以台灣來看，通才很多時間更重要的。
+
+      作者提到了:
+
+      #+BEGIN_QUOTE
+      Switching platforms creates a huge negative impact in your CV. It's really hard for an employer to justify paying a big sum of money for a developer that is not an expert on a particular product.
+      #+END_QUOTE
+
+      簡單講就是太通才了，很難讓人認為你會適合某個特定位置。
+
+    - 不要因為 $$ 而轉向管理職
+
+      不過一樣在台灣，管理職比較賺錢....  而且在匪區會有這種狀況: [[https://www.zhihu.com/question/55618811][如何評價 2017 年初華為開始「清理」34 歲以上的職員？ - 程序員 - 知乎]]
+
+
+    - 休息一段時間
+
+      這可能就像是讓你可以充電吧，的確有時很忙會想休息一段時間。而這段時間可以多學點別的東西。
+
+    - ABC: Always be coding
+
+      這和 [[https://medium.com/always-be-coding/abc-always-be-coding-d5f8051afce2#.wqmjpjgn9][ABC: Always Be Coding]] 這篇文章強調的一樣，你要寫了才會，要多寫多學，這也同時對你工作面試有幫助，因為你可能會遇到某種方式的處理方法，而這正是對方想要的。
+
+    - 成為開發者社群的一部分
+
+      可以認識人。也可以從夥伴們中學到有趣的東西。
+
+    - 不要再招聘網求職
+
+      當到了某個年紀，找工作最好是被人推薦的。其實很多很好的工作也要被推薦才能進去。
+
 ** TODO [[https://www.mapr.com/blog/5-google-projects-changed-big-data-forever?utm_campaign=CodeTengu&utm_medium=web&utm_source=CodeTengu_76][5 Google Projects That Changed Big Data Forever | MapR]]
